kubernetes-networks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels: 
    app: homeworkhelm
  name: homeworkhelm
